2014-06-24  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup_visuals.php, include/functions_networkmap.php,
	include/functions_config.php: added the visual config value for
	to set the width of networkmap, and fixed the overlap of networkmap
	L2.

2014-06-24  Ramon Novoa  <rnovoa@artica.es>

	* operation/snmpconsole/snmp_mib_uploader.php: Added additional information.

2014-06-24  Ramon Novoa  <rnovoa@artica.es>

	* operation/snmpconsole/snmp_mib_uploader.php: Display information about the
	  MIB uploader.

2014-06-24  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_networkmap.php: Modified the function
	"networkmap_generate_dot" to link the orphan nodes with a
	central node when selecting the L2 network interfaces option.

2014-06-24  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_extensions.php, index.php: force to load the
	new integrated update manager and don't load the old update manager
	extension.

2014-06-24  Vanessa Gil <vanessa.gil@artica.es>

	* pandoradb.data.sql
	  pandoradb.data.oracle.sql
	  pandoradb.data.postgreSQL.sql
	  extras/pandoradb_migrate_5.0.x_to5.1.mysql.sql
	  extras/pandoradb_migrate_5.0.x_to5.1.oracle.sql
	  extras/pandoradb_migrate_5.0.x_to5.1.postgreSQL.sql: Delete
	custom SNMP task.

2014-06-24  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_common.php,
	  include/help/en/help_ff_interval.php,
	  include/help/en/help_ff_threshold.php,
	  include/help/en/help_ff_timeout.php,
	  include/help/es/help_ff_interval.php,
	  include/help/es/help_ff_threshold.php,
	  include/help/es/help_ff_timeout.php,
	  include/help/ja/help_ff_interval.php,
	  include/help/ja/help_ff_threshold.php,
	  include/help/ja/help_ff_timeout.php: Updated help files for the FF threshold.

2014-06-24  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_api.php: Added support for 'each_ff' and
	'ff_timeout' to 'set add_*_module_policy'.
